--- a/bydemet/stylesheet.css
+++ b/bydemet/stylesheet.css
@@ -4,6 +4,15 @@
     font-family: 'Lora', serif;
 }
 
+.hidden {
+    opacity: 0;
+  }
+  
+  .visible {
+    opacity: 1;
+    transition: opacity 2s ease-out;
+  }
+
     
 ul {
     display: flex;
@@ -61,11 +70,13 @@ hr.solid {
 #velkommen {
     display: flex;
     justify-content: space-around;
+    padding-top: 40px;
+    padding-bottom: 60px;
 }
 
 #meninger {
     box-sizing: border-box;
-    background-color: #474e5d;
+    background-color: #FCF8F4;
   }
   
   
@@ -81,7 +92,7 @@ hr.solid {
     content: '';
     position: absolute;
     width: 6px;
-    background-color: white;
+    background-color: #A6A6A6;
     top: 0;
     bottom: 0;
     left: 50%;
@@ -103,8 +114,8 @@ hr.solid {
     width: 25px;
     height: 25px;
     right: -17px;
-    background-color: white;
-    border: 4px solid #FF9F55;
+    background-color: #d4af37;
+    border: 4px solid #d4af37;
     top: 15px;
     border-radius: 50%;
     z-index: 1;
@@ -129,9 +140,9 @@ hr.solid {
     width: 0;
     z-index: 1;
     right: 30px;
-    border: medium solid white;
+    border: medium solid #A6A6A6;
     border-width: 10px 0 10px 10px;
-    border-color: transparent transparent transparent white;
+    border-color: transparent transparent transparent #A6A6A6;
   }
   
   /* Add arrows to the right container (pointing left) */
@@ -143,9 +154,9 @@ hr.solid {
     width: 0;
     z-index: 1;
     left: 30px;
-    border: medium solid white;
+    border: medium solid #A6A6A6;
     border-width: 10px 10px 10px 0;
-    border-color: transparent white transparent transparent;
+    border-color: transparent #A6A6A6 transparent transparent;
   }
   
   /* Fix the circle for containers on the right side */
@@ -156,7 +167,7 @@ hr.solid {
   /* The actual content */
   .content {
     padding: 20px 30px;
-    background-color: white;
+    background-color: #a6a6a6;
     position: relative;
     border-radius: 6px;
   }
@@ -193,6 +204,20 @@ hr.solid {
     left: 0%;
     }
   }
+
+  #tider {
+    position: relative;
+    text-align: center;
+    color: white;
+  }
+
+  #tidcent {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
 
 
 footer {
