--- a/bydemet/stylesheet.css
+++ b/bydemet/stylesheet.css
@@ -4,6 +4,12 @@
     font-family: 'Lora', serif;
 }
 
+/*Paragraphs and Headnings*/
+
+h2{
+  color: #474747;
+}
+
 .hidden {
     opacity: 0;
   }
@@ -205,7 +211,6 @@ hr.solid {
     }
   }
 
-<<<<<<< Updated upstream
   #tider {
     position: relative;
     text-align: center;
@@ -219,21 +224,45 @@ hr.solid {
     transform: translate(-50%, -50%);
   }
 
-
-=======
   /*FAQ side*/
 
+  .SoS{
+    text-align: center;
+    padding: 5%;
+  }
+
+  .QnA{
+    margin-left: 10%;
+    padding-bottom: 6%;
+  }
+
+  .QnA p{
+    padding-top: 14px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #474747;
+  }
+
+  .faq{
+    width: 600px;
+    border-top: 1.2pt solid #474747;
+}
+
   .arrowbtn {
-    width: 15px;
-    height: 15px;
+    width: 12px;
+    height: 12px;
     border: 2px solid #474747;
     background-color: #FCF8F4;
     border-left: 0;
     border-top: 0;
     transform: rotate(45deg);
+    margin-left: 42%;
+    position: relative;
+    top: -22px;
   }
 
->>>>>>> Stashed changes
+  .Svar{
+    display: none;
+  }
 
 footer {
     background-color: #BB8C77;
