--- a/bydemet/stylesheet.css
+++ b/bydemet/stylesheet.css
@@ -272,6 +272,16 @@ hr.solid {
   transform: translate(-50%, -50%);
 }
 
+#follow1 {
+  display: flex;
+  justify-content: center;
+}
+
+#follow2 {
+  display: flex;
+  justify-content: center;
+}
+
 /*FAQ side*/
 
 .SoS {
