--- a/bydemet/stylesheet.css
+++ b/bydemet/stylesheet.css
@@ -4,22 +4,14 @@
   font-family: 'Lora', serif;
 }
 
+
 /*Paragraphs and Headnings*/
 
 h2 {
   color: #474747;
 }
 
-.hidden {
-  opacity: 0;
-}
-
-.visible {
-  opacity: 1;
-  transition: opacity 2s ease-out;
-}
-
-
+/*Header på laptop*/
 ul {
   display: flex;
   width: 100%;
@@ -64,16 +56,42 @@ a {
   padding-left: 40px;
 }
 
+/*Header til mobile*/
+#headmob {
+  height: 50px;
+
+  background-color: #D8C9BD;
+
+  display: flex;
+  justify-content: space-between;
+}
+
+
+/*Burgermenu side*/
+#menumob > a {
+  background-color: #FCF8F4;
+  color: #000;
+  text-decoration: none;
+  font-size: xx-large;
+
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding-top: 37px;
+  height: 110px;
+}
+
+/*Baggrundsfarve for siden*/
 main {
   background-color: #FCF8F4;
 }
 
-
+/*skille linje mellem afsnit*/
 hr.solid {
   border-top: 3px solid #bbb;
 }
 
-
+/*Velkommen afsnit på index side*/
 #velkommen {
   display: flex;
   justify-content: space-around;
@@ -81,20 +99,18 @@ hr.solid {
   padding-bottom: 60px;
 }
 
+/*Afsnit på index siden med folks udtalelser om ByDemet*/
 #meninger {
   box-sizing: border-box;
   background-color: #FCF8F4;
 }
 
-
-/* The actual timeline (the vertical ruler) */
 .timeline {
   position: relative;
   max-width: 1200px;
   margin: 0 auto;
 }
 
-/* The actual timeline (the vertical ruler) */
 .timeline::after {
   content: '';
   position: absolute;
@@ -106,7 +122,6 @@ hr.solid {
   margin-left: -3px;
 }
 
-/* Container around content */
 .container {
   padding: 10px 40px;
   position: relative;
@@ -114,7 +129,7 @@ hr.solid {
   width: 50%;
 }
 
-/* The circles on the timeline */
+
 .container::after {
   content: '';
   position: absolute;
@@ -128,17 +143,15 @@ hr.solid {
   z-index: 1;
 }
 
-/* Place the container to the left */
 .left {
   left: 0;
 }
 
-/* Place the container to the right */
+
 .right {
   left: 50%;
 }
 
-/* Add arrows to the left container (pointing right) */
 .left::before {
   content: " ";
   height: 0;
@@ -152,7 +165,6 @@ hr.solid {
   border-color: transparent transparent transparent #A6A6A6;
 }
 
-/* Add arrows to the right container (pointing left) */
 .right::before {
   content: " ";
   height: 0;
@@ -166,12 +178,10 @@ hr.solid {
   border-color: transparent #A6A6A6 transparent transparent;
 }
 
-/* Fix the circle for containers on the right side */
 .right::after {
   left: -16px;
 }
 
-/* The actual content */
 .content {
   padding: 20px 30px;
   background-color: #a6a6a6;
@@ -179,22 +189,18 @@ hr.solid {
   border-radius: 6px;
 }
 
-/* Media queries - Responsive timeline on screens less than 600px wide */
 @media screen and (max-width: 600px) {
 
-  /* Place the timelime to the left */
   .timeline::after {
     left: 31px;
   }
 
-  /* Full-width containers */
   .container {
     width: 100%;
     padding-left: 70px;
     padding-right: 25px;
   }
 
-  /* Make sure that all arrows are pointing leftwards */
   .container::before {
     left: 60px;
     border: medium solid white;
@@ -202,63 +208,17 @@ hr.solid {
     border-color: transparent white transparent transparent;
   }
 
-  /* Make sure all circles are at the same spot */
   .left::after,
   .right::after {
     left: 15px;
   }
 
-  /* Make all right containers behave like the left ones */
   .right {
     left: 0%;
   }
-
-  #tider {
-    position: relative;
-    text-align: center;
-    color: white;
-  }
-
-  #tidcent {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-
-#follow1 {
-    display: flex;
-    justify-content: center;
 }
 
-#follow2 {
-    display: flex;
-    justify-content: center;
-}
-
-  /*FAQ side*/
-
-  .SoS{
-    text-align: center;
-    padding: 5%;
-  }
-
-  .QnA{
-    margin-left: 10%;
-    padding-bottom: 6%;
-  }
-
-  .QnA p{
-    padding-top: 14px;
-    font-family: Arial, Helvetica, sans-serif;
-    color: #474747;
-  }
-
-  .faq{
-    width: 600px;
-    border-top: 1.2pt solid #474747;
-}
-
+/*Afsnit med åbningstider på index siden*/
 #tider {
   position: relative;
   text-align: center;
@@ -272,15 +232,17 @@ hr.solid {
   transform: translate(-50%, -50%);
 }
 
+/*Instagram afsnit på index siden*/
 #follow1 {
-  display: flex;
-  justify-content: center;
+  padding-left: 50px;
 }
 
 #follow2 {
   display: flex;
   justify-content: center;
+  gap: 20px;
 }
+
 
 /*FAQ side*/
 
@@ -341,6 +303,7 @@ hr.solid {
   /* Unicode for "minus tegn" */
 }
 
+/*footer*/
 footer {
   background-color: #BB8C77;
 
@@ -358,9 +321,39 @@ p {
   justify-content: space-between;
 }
 
+.fa-solid {
+  padding-left: 115px;
+}
+
 #aabning {
   display: flex;
   justify-content: center;
 
   padding-top: 40px;
+}
+
+/*Media queries*/
+@media screen and (min-width: 600px) {
+  #headmob {
+    visibility: hidden;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  body > nav {
+    display: none;
+  }
+  
+  #velkommen > div > img { 
+    visibility: hidden;
+  }
+
+
+
+  #follow1 {
+    display: flex;
+    justify-content: center;
+  }
+
+  
 }
