--- a/bydemet/stylesheet.css
+++ b/bydemet/stylesheet.css
@@ -1,8 +1,9 @@
-* {
-  margin: 0;
-  padding: 0;
-  font-family: 'Lora', serif;
-}
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond&display=swap'); 
+ *{
+    margin: 0;
+    padding: 0;
+    font-family: 'Cormorant Garamond', serif;
+ }
 
 
 /*Paragraphs and Headnings*/
@@ -260,6 +261,169 @@ hr.solid {
   100%{opacity:1}
 }
 
+
+  /* The golden line*/
+  #goldline{
+    background-color: #d2ac47;
+    border:#d2ac47 ;
+    height: 3px;
+  }
+  
+
+Behandlingssiden og Slideshow
+/* Behandlinger SIDEN */ 
+  /* Header */
+#h1{
+  padding-top: 18%;
+  text-align: center;
+  font-family: 'Lora', serif;
+  font-weight: 100;
+}
+
+  /* The actual text */
+#h3{
+  font-family: Helvetica, sans-serif;
+  text-align: center;
+  font-weight: 100;
+  padding-bottom: 10%;
+}
+
+  /* The flexbox */
+div.behandling { 
+  display:flex;
+  align-items: flex-end;
+  justify-content:space-around;
+  padding-left: 10%;
+  padding-right: 10%;
+  padding-bottom: 10%;
+}
+
+.behandling > div{
+  width: 80%;
+  height:200px;
+  padding-top:20px;
+  text-align:center;
+}
+
+#box{
+  width: 350px;
+  height: 220px;
+}
+
+/* Slideshow */
+* {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 600px;
+  position: relative;
+  margin: auto;
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+  /* Media queries - Responsive timeline on screens less than 600px wide */
+  @media screen and (max-width: 600px) {
+    /* Place the timelime to the left */
+    .timeline::after {
+    left: 31px;
+    }
+    
+    /* Full-width containers */
+    .container {
+    width: 100%;
+    padding-left: 70px;
+    padding-right: 25px;
+    }
+    
+    /* Make sure that all arrows are pointing leftwards */
+    .container::before {
+    left: 60px;
+    border: medium solid white;
+    border-width: 10px 10px 10px 0;
+    border-color: transparent white transparent transparent;
+    }
+  
+    /* Make sure all circles are at the same spot */
+    .left::after, .right::after {
+    left: 15px;
+    }
+    
+    /* Make all right containers behave like the left ones */
+    .right {
+    left: 0%;
+    }
+  }
+
+
+
+
 /*Pris side*/
 /* h2 sectionen har jeg brugt for at administere overskriften  */
 
@@ -321,6 +485,20 @@ h5:after {
   z-index: -1;
  
 
+}
+
+/*OM OS*/
+
+.omos-container {
+  display: flex;
+  padding: 120px;
+}
+.frame {
+  margin-left: 120px;
+}
+
+#Ali {
+  margin-right: 120px;
 }
 
 
