--- a/bydemet/stylesheet.css
+++ b/bydemet/stylesheet.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond&display=swap'); 
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Albert+Sans:wght@200&display=swap');
  *{
     margin: 0;
     padding: 0;
@@ -6,13 +8,32 @@
  }
 
 
-/*Paragraphs and Headnings*/
+/*Paragraphs and Headings*/
+p{
+  font-family: 'Albert Sans', sans-serif;
+  line-height: 1.5em;
+}
 
-h2 {
-  color: #474747;
+.ord{
+  text-align: center;
+  font-family: 'Lora', serif;
+  font-weight: 100;
+  font-size: 30px;
+  padding-top: 40px;
+  padding-bottom: 35px;
+}
+
+h4{
+  text-align: center;
+  font-family: 'Lora', serif;
+  font-weight: 100;
 }
 
 /*Header på laptop*/
+#D {
+  width: 100px;
+}
+
 ul {
   display: flex;
   width: 100%;
@@ -20,7 +41,7 @@ ul {
   margin: 0 auto;
   justify-content: space-between;
   list-style: none;
-  padding-bottom: 0.5;
+  padding-bottom: 0.5px;
   padding-left: 100px;
   padding-right: 100px;
   background-color: #D8C9BD;
@@ -52,9 +73,17 @@ a {
   background-color: #D8C9BD;
 }
 
-.mellemrum {
-  background-color: #D8C9BD;
-  padding-left: 40px;
+.button{
+  background-color: #BB8C77;
+  border: none;
+  border-radius: 12px;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
 }
 
 /*Header til mobile*/
@@ -82,7 +111,7 @@ a {
   height: 110px;
 }
 
-/*Baggrundsfarve for siden*/
+/*Baggrundsfarve for siderne*/
 main {
   background-color: #FCF8F4;
 }
@@ -95,10 +124,19 @@ hr.solid {
 /*Velkommen afsnit på index side*/
 #velkommen {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   padding-top: 40px;
-  padding-bottom: 60px;
+  padding-bottom: 90px;
+  padding-top: 100px;
 }
+
+.title{
+  font-family: 'Dancing Script', cursive;
+  font-size: 55px;
+  padding-right: 40px;
+  padding-bottom: 20px;
+}
+
 
 /*Afsnit på index siden med folks udtalelser om ByDemet*/
 #meninger {
@@ -116,7 +154,7 @@ hr.solid {
   content: '';
   position: absolute;
   width: 6px;
-  background-color: #A6A6A6;
+  background-color: #D8C9BD;
   top: 0;
   bottom: 0;
   left: 50%;
@@ -161,9 +199,9 @@ hr.solid {
   width: 0;
   z-index: 1;
   right: 30px;
-  border: medium solid #A6A6A6;
+  border: medium solid #D8C9BD;
   border-width: 10px 0 10px 10px;
-  border-color: transparent transparent transparent #A6A6A6;
+  border-color: transparent transparent transparent #D8C9BD;
 }
 
 .right::before {
@@ -174,9 +212,9 @@ hr.solid {
   width: 0;
   z-index: 1;
   left: 30px;
-  border: medium solid #A6A6A6;
+  border: medium solid #D8C9BD;
   border-width: 10px 10px 10px 0;
-  border-color: transparent #A6A6A6 transparent transparent;
+  border-color: transparent #D8C9BD transparent transparent;
 }
 
 .right::after {
@@ -185,7 +223,7 @@ hr.solid {
 
 .content {
   padding: 20px 30px;
-  background-color: #a6a6a6;
+  background-color: #D8C9BD;
   position: relative;
   border-radius: 6px;
 }
@@ -223,7 +261,10 @@ hr.solid {
 #tider {
   position: relative;
   text-align: center;
-  color: white;
+  color: #BB8C77;
+  
+  
+  
 }
 
 #tidcent {
@@ -233,7 +274,7 @@ hr.solid {
   transform: translate(-50%, -50%);
 }
 
-<<<<<<< HEAD
+
 /*Instagram afsnit på index siden*/
 #follow1 {
   padding-left: 50px;
@@ -269,12 +310,17 @@ hr.solid {
     border:#d2ac47 ;
     height: 3px;
   }
+
+  .goldline2{
+    background-color: #d2ac47;
+    border:#d2ac47 ;
+    height: 3px;
+  }
   
 
-Behandlingssiden og Slideshow
 /* Behandlinger SIDEN */ 
   /* Header */
-#h1{
+.h1{
   padding-top: 18%;
   text-align: center;
   font-family: 'Lora', serif;
@@ -282,8 +328,8 @@ Behandlingssiden og Slideshow
 }
 
   /* The actual text */
-#h3{
-  font-family: Helvetica, sans-serif;
+.h3{
+  font-family: 'Albert Sans', sans-serif;
   text-align: center;
   font-weight: 100;
   padding-bottom: 10%;
@@ -311,6 +357,7 @@ div.behandling {
   height: 220px;
 }
 
+
 /* Slideshow */
 * {box-sizing:border-box}
 
@@ -326,27 +373,9 @@ div.behandling {
   display: none;
 }
 
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
 
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
+
+
 
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
@@ -422,41 +451,33 @@ div.behandling {
     }
   }
 
+  #mave {
+    width: 100%;
+  }
+
+  #hule {
+    width: 100%;
+  }
+
+  #arm {
+    width: 100%;
+  }
+
 
 
 
 /*Pris side*/
-/* h2 sectionen har jeg brugt for at administere overskriften  */
-
-h2{
-  margin:0;
-  padding:0;
-  box-sizing:border-box;
-  color: rgb(0, 0, 0);
-  font-size: 50px;
-  font-family: optima, bold ;
-  text-align: center;
-}
-/* bodyen har jeg brugt for at kunne give min side en baggrundsfarve 
-*/
-body {
-
-  background-color: #FCF8F4;
-}
-
 /* har jeg sat ind for at kunne give dem en skrifttype og en størrlse  */
 
 .priserne {
-  font-family: Helvetica Neue, light;
-  
-  padding-top: 50px;
+padding-top: 50px;
 padding-right: 80px;
-padding-bottom: 50px;
+padding-bottom: 112px;
 padding-left: 80px;
-
 }
-.linje {
 
+/* for at lave en afstand imellem behandlingen og prisen */
+.afstand {
   text-align:right;
   float: right;
 }
@@ -464,56 +485,57 @@ padding-left: 80px;
 h5 {
   font-size: 1rem;
   position: relative;
-}
-
-/* h2 er en siction for at kunne sætte linjen i mellem 
-behandlingen og priserne, og at linjen ikke går ind over teksten 
-jeg har også givet dem hvilken side de skal stå på */
-h5 span {
-  background-color: #FCF8F4;
-  padding-right: 10px;
+  font-family: 'Albert Sans', sans-serif;
 
 }
 
-h5:after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0em;
-  height: 0.5em;
-  border-top: 1px solid black;
-  z-index: -1;
- 
-
+.priserne h5 span{
+  font-family: 'Albert Sans', sans-serif;
 }
 
-=======
->>>>>>> 7c95b314423699e660d8ae808103c868dd15e696
+
+
+
 /*OM OS*/
 
 .omos-container {
   display: flex;
   padding: 120px;
 }
-.frame {
-  margin-left: 120px;
+.cetin {
+  margin-left: 140px;
+  height: 400px;
+  padding-right: 20px;
+}
+.cetintitle{
+  text-align: left;
+  font-family: 'Lora', serif;
+  font-weight: 100;
+
 }
 
 #Ali {
   margin-right: 120px;
 }
-
-<<<<<<< HEAD
-
-=======
->>>>>>> 7c95b314423699e660d8ae808103c868dd15e696
+.undertitel{
+  font-size: 20px;
+  font-weight: 150;
+}
 /*FAQ side*/
+#spg{
+  text-align: center;
+  font-family: 'Lora', serif;
+  font-weight: 100;
+  font-size: 30px;
+}
+
 
 /*overskriften*/
 .SoS {
   text-align: center;
   padding: 5%;
+  font-family: 'Lora', serif;
+
 }
 
 /*container til faq spm*/
@@ -533,6 +555,7 @@ h5:after {
 
 /* Styling på buttons/spm der åbner og lukker for faq-svar classen*/
 .faq-spm {
+  font-family: 'Albert Sans', sans-serif;
   color: #474747;
   cursor: pointer;
   padding: 30px 20px;
@@ -541,6 +564,7 @@ h5:after {
   outline: none;
   transition: 0.4s;
   margin: auto;
+  
 }
 
 /* Style faq-svar panel. Obs: hidden by default */
@@ -572,6 +596,8 @@ footer {
   background-color: #BB8C77;
 
   color: black;
+
+  padding-top: 30px;
 }
 
 footer>section>div>h3,
@@ -583,6 +609,8 @@ p {
 #footblock {
   display: flex;
   justify-content: space-between;
+  margin-right: 30px;
+  margin-left: 30px;
 }
 
 .fa-solid {
@@ -607,17 +635,40 @@ p {
   body > nav {
     display: none;
   }
+
+
+  #goldline {
+    display: none;
+  }
+
+  #headmob {
+    display: flex;
+    justify-content: right;
+  }
+
+  #burger {
+    height: 45px;
+    width: 50px;
+  }
   
   #velkommen > div > img { 
-    visibility: hidden;
+    display: none;
   }
 
-
-
-  #follow1 {
-    display: flex;
-    justify-content: center;
+  #follow {
+    display: none;
   }
 
+  #forloeb {
+    display: none;
+  }
+
+  main > .behandling {
+    display: none;
+  }
+
+  .omos-container > div > img {
+    display: none;
+  }
   
 }
